Bug 153049 - No expanding cell range while scrolling or when pasting outside of viewport
Summary: No expanding cell range while scrolling or when pasting outside of viewport
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.5.0.1 rc
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.0.3
Keywords: bibisected, bisected, regression
: 150863 (view as bug list)
Depends on:
Blocks: GTK3 Scrolling-PageUpDown
  Show dependency treegraph
 
Reported: 2023-01-16 15:57 UTC by Stéphane Guillou (stragu)
Modified: 2023-01-23 20:13 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stéphane Guillou (stragu) 2023-01-16 15:57:34 UTC
Steps:
1. Open Calc
2. Scroll down

Results:
The range of "active" cells (for lack of a better word) does not expand automatically, the scollbar stays the same size, progression is blocked beyond about row 138.

Expected: I can continue scrolling as far as I want.

Same issue means pasting beyond visible rows does not allow scrolling to see what was pasted.

Regression, as present in:

Version: 7.5.0.1 (X86_64) / LibreOffice Community
Build ID: 77cd3d7ad4445740a0c6cf977992dafd8ebad8df
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

But not in:

Version: 7.4.4.2 / LibreOffice Community
Build ID: 85569322deea74ec9134968a29af2df5663baa21
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Not reproduced on KF5 or GEN VCLs.
Comment 1 Stéphane Guillou (stragu) 2023-01-16 16:01:55 UTC
I suspected it had to do with native scrollbars support, new in 7.5.

Bibisected with linux-64-7.5 repo to first bad commit cea5af03761842273c4e14b12d87f40aca7bb782 which points to core commit:

commit 7b20a1b0736825c9c934288428e6e581f79971e2
author	Caolán McNamara <caolanm@redhat.com>	Thu Aug 04 16:32:10 2022 +0100
committer	Caolán McNamara <caolanm@redhat.com>	Fri Aug 05 09:52:50 2022 +0200
tree c9b534711745499fa31031f201cd8ee320b8cac4
parent 8c4e8818fe9f5ac1f6cdf908299cc109d67f1e50

tdf#117388 use native scrollbar under gtk in calc document

Change-Id: I436067b4f2b463fe9a5d6789cf96f906891757bd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/137810

Caolán, can you please have a look?
Comment 2 Caolán McNamara 2023-01-16 21:06:34 UTC
Is this with mouse scroll wheel?
Comment 3 Stéphane Guillou (stragu) 2023-01-17 08:15:24 UTC
(In reply to Caolán McNamara from comment #2)
> Is this with mouse scroll wheel?

Yes, mouse or touchpad scroll.
Page down and page up works well.
Comment 4 Stéphane Guillou (stragu) 2023-01-17 08:38:31 UTC
(In reply to Stéphane Guillou (stragu) from comment #0)
> [...] progression is blocked beyond about row 138.

Disregard the row number, this is entirely dependent on screen size, zoom level, etc.
Comment 5 Stéphane Guillou (stragu) 2023-01-17 08:45:10 UTC
*** Bug 150863 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2023-01-17 10:14:04 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/79541a4808561fbe400cb4e0d33c8ddc23cf9d84

tdf#153049 use ScrollType::DontKnow for a mouse wheel spin

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2023-01-17 15:12:40 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/873a695b64269a6b92766f65930786314351e83f

tdf#153049 UpdateScrollBars on mouse release

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2023-01-17 15:13:25 UTC
I think it should be good in trunk now, backports to 7-5 in gerrit
Comment 9 Commit Notification 2023-01-18 11:41:48 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/2e2e1096c37b9fc9ebc84a0250a59038a2c7dead

Resolves: tdf#153049 cell range not expanding while scrolling

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Stéphane Guillou (stragu) 2023-01-20 17:38:39 UTC
Fix verified in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 579d144290c1617fdb38d09b30900a6bbe390b8d
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thank you Caolán!
Comment 11 Commit Notification 2023-01-23 20:04:17 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5-0":

https://git.libreoffice.org/core/commit/fc649636cf587eaee5d225ff934490b377b21301

Resolves: tdf#153049 cell range not expanding while scrolling

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.