Resolves: tdf#153049 cell range not expanding while scrolling

use ScrollType::DontKnow for a mouse wheel spin
use has_grab() to try and distinguish these

and UpdateScrollBars on mouse release

which is what the old code effectively did

Change-Id: I19b6de0a0015420d1802969064b3338ce6ae1638
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145664
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>