include/svtools/scrolladaptor.hxx
@@ -54,6 +54,7 @@ public:
     virtual tools::Long GetThumbPos() const override;
 
     void SetScrollHdl(const Link<weld::Scrollbar&, void>& rLink);
+    void SetMouseReleaseHdl(const Link<const MouseEvent&, bool>& rLink);
 
     // what is it
     bool IsHoriScroll() const { return m_bHori; }
